DTO's toegevoegd voor dag, maaltijd, toevoeging en item.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Data</module>
         <module>Logica</module>
         <module>UI</module>
+        <module>UI_JavaFX</module>
     </modules>
     <dependencies>
         <dependency>
