--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>Logica</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
